# dictate-agent

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/commands/: auto_build.md  auto_implement.md  auto_plan.md  auto_research.md  project_spec.md
.claude/commands/docs/: autonomous_heuristics.md
.claude/hooks/: stop_notify.js
.claude/skills/: dioxus-component-generator.skill  healthy-mind-context-integrator.skill  healthy-mind-css-asset-manager.skill  healthy-mind-debug-assistant.skill  healthy-mind-form-generator.skill  healthy-mind-plan-documenter.skill  healthy-mind-research-documenter.skill  healthy-mind-route-generator.skill  healthy-mind-rust-fixer.md  healthy-mind-test-generator.skill  high-performance-rust.skill  migration-creator.skill  rust-documentation-generator.skill  rust-error-fixer.skill  rust-refactoring-assistant.skill  rust-server-function-scaffolder.skill  skill-creator.skill  test-suite-generator.skill
.claude/skills/dictate-agent-developer/: SKILL.md
.claude/skills/edi-fixture-generator/: SKILL.md
.claude/skills/healthy-mind-context-integrator/: SKILL.md
.serena/: project.yml
.serena/memories/: dictate-agent-overview.md  style_and_conventions.md  suggested_commands.md
config/: config.example.toml
dictate/: __init__.py  audio.py  config.py  executor.py  grammar.py  history.py  local_executor.py  main.py  notify.py  output.py  router.py  status_window.py  timer_executor.py  transcribe.py
models/: .gitkeep
scripts/: dictate-cancel  dictate-toggle  run.sh
systemd/: dictate-agent.service
(+28 files in other folders)
