[project]
name = "dictate-agent"
version = "1.0.0"
description = "Ultimate voice dictation agent with Claude integration"
authors = [{name = "Jake"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "optimum>=1.19.0",
    "ollama>=0.3.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
dictate-agent = "dictate.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dictate"]

[tool.ruff]
line-length = 100
target-version = "py310"
